[AFK] - Adjust mobile rendering

--- a/Pages/CustomPage.razor
+++ b/Pages/CustomPage.razor
@@ -112,7 +112,7 @@
       }
 
       #S05HKYIg10ki9xGw {
-        font-size: calc(4.35298652em - var(--ffsd));
+        font-size: calc(4.85298652em - var(--ffsd));
       }
 
       #pK3rMF4hxSwSJvRf {
@@ -132,7 +132,7 @@
       }
 
       #G0VXVW5bRHSqtCvH {
-        font-size: calc(1.78614798em - var(--ffsd));
+        font-size: calc(2.786148em - var(--ffsd));
       }
 
       #sDmJyUY9mHXh7Yo1 {
@@ -1166,6 +1166,10 @@
         grid-area: 16 / 12 / 28 / 15;
       }
 
+      .mud-icon-size-large {
+          font-size: 7.25rem;
+      }
+
       #Q3rEIXDFhDxXo8Xs {
         font-size: calc(1.37049705em - var(--ffsd));
       }
@@ -1236,14 +1240,25 @@
         grid-area: 20 / 29 / 25 / 30;
       }
 
+      #KT0IwfR2puGUFjMS,
+      #KT0IwfR2puGUFjMS,
+      #HyPAchTddSw63kqC,
+      #PDuO7bYmbsuP63zg,
+      #wq4N6X4JZRr1SNk4,
+      #RKzUUPl3JqY3Yz4V {
+        display: none;
+      }
+
       #aGwTWNInW5rbndhC {
-        grid-template-columns: 0 0 2.1988852rem 0.64500609rem 14.92631058rem 1.58387678rem 0.10053307rem 0 2.11470175rem 0.68709781rem 12.57966186rem 0 1.83761187rem 0.26962811rem 0.28150047rem 0.40932823rem 11.8138034rem 0.49878931rem 2.10468102rem 0.00255896rem 0.5523005rem 0.1385282rem 11.17648589rem 0.69178839rem 0 2.17055676rem 0.43451285rem 0.19299907rem 14.41727373rem 0.55485946rem;
-        grid-template-rows: 0 0 0 0 0 minmax(1.52203693rem, max-content) 0 0 0 0 minmax(1.21981382rem, max-content) minmax(0.32017958rem, max-content) minmax(0.08821056rem, max-content) minmax(0.00289566rem, max-content) minmax(0.00746177rem, max-content) minmax(0.16011644rem, max-content) minmax(0.10504551rem, max-content) 0 minmax(0.03840025rem, max-content) minmax(0.02833499rem, max-content) minmax(1.17980621rem, max-content) minmax(0.10504551rem, max-content) minmax(0.06673524rem, max-content) minmax(0.02452128rem, max-content) minmax(0.12661082rem, max-content) minmax(0.27262372rem, max-content) 0 minmax(0.00289566rem, max-content) 0 minmax(0.40839014rem, max-content);
+        display: table-row !important;
+        position: relative !important;
+        font-size: 3.65rem;
+        gap: 1rem;
       }
 
       #aPqlW3jrUCnHuDys {
         position: relative;
-        grid-area: 5 / 4 / 6 / 7;
+        grid-area: 2 / 4 / 5 / 6;
       }
 
       #GKRS8gwgYbkGLafi {
@@ -1299,7 +1314,7 @@
       }
 
       #S05HKYIg10ki9xGw {
-        font-size: calc(4.33978216em - var(--ffsd));
+        font-size: calc(5.139782em - var(--ffsd));
       }
 
       #pK3rMF4hxSwSJvRf {
@@ -1319,7 +1334,7 @@
       }
 
       #G0VXVW5bRHSqtCvH {
-        font-size: calc(1.82259998em - var(--ffsd));
+        font-size: calc(3.2226em - var(--ffsd));
       }
 
       #sDmJyUY9mHXh7Yo1 {
@@ -2426,14 +2441,29 @@
         grid-area: 20 / 29 / 25 / 30;
       }
 
+      #KT0IwfR2puGUFjMS,
+      #KT0IwfR2puGUFjMS,
+      #HyPAchTddSw63kqC,
+      #PDuO7bYmbsuP63zg,
+      #wq4N6X4JZRr1SNk4,
+      #RKzUUPl3JqY3Yz4V {
+        display: none;
+      }
+
       #aGwTWNInW5rbndhC {
-        grid-template-columns: 0 0 2.24376041rem 0.65816948rem 15.23092916rem 1.61620079rem 0.10258477rem 0 2.15785892rem 0.70112022rem 12.83638965rem 0 1.87511415rem 0.27513072rem 0.28724537rem 0.41768187rem 12.05490143rem 0.50896869rem 2.14763369rem 0.00261118rem 0.56357194rem 0.1413553rem 11.40457744rem 0.70590652rem 0 2.21485383rem 0.44338046rem 0.19693783rem 14.71150381rem 0.56618312rem;
-        grid-template-rows: 0 0 0 0 0 minmax(1.55309891rem, max-content) 0 0 0 0 minmax(1.24470798rem, max-content) minmax(0.32671386rem, max-content) minmax(0.09001078rem, max-content) minmax(0.00295475rem, max-content) minmax(0.00761405rem, max-content) minmax(0.16338412rem, max-content) minmax(0.1071893rem, max-content) 0 minmax(0.03918393rem, max-content) minmax(0.02891326rem, max-content) minmax(1.20388389rem, max-content) minmax(0.1071893rem, max-content) minmax(0.06809719rem, max-content) minmax(0.02502171rem, max-content) minmax(0.12919471rem, max-content) minmax(0.27818747rem, max-content) 0 minmax(0.00295475rem, max-content) 0 minmax(0.41672464rem, max-content);
+        display: table-row !important;
+        position: relative !important;
+        font-size: 3.15rem;
+        gap: 1rem;
       }
 
       #aPqlW3jrUCnHuDys {
         position: relative;
-        grid-area: 5 / 4 / 6 / 7;
+        grid-area: 2 / 4 / 6 / 7;
+      }
+
+      .mud-icon-size-large {
+          font-size: 6.05rem;
       }
 
       #GKRS8gwgYbkGLafi {
@@ -2489,7 +2519,7 @@
       }
 
       #S05HKYIg10ki9xGw {
-        font-size: calc(4.26228605em - var(--ffsd));
+        font-size: calc(4.86228605em - var(--ffsd));
       }
 
       #pK3rMF4hxSwSJvRf {
@@ -2509,7 +2539,7 @@
       }
 
       #G0VXVW5bRHSqtCvH {
-        font-size: calc(1.79005355em - var(--ffsd));
+        font-size: calc(2.790054em - var(--ffsd));
       }
 
       #sDmJyUY9mHXh7Yo1 {
@@ -3615,14 +3645,29 @@
         grid-area: 20 / 29 / 25 / 30;
       }
 
+      #KT0IwfR2puGUFjMS,
+      #KT0IwfR2puGUFjMS,
+      #HyPAchTddSw63kqC,
+      #PDuO7bYmbsuP63zg,
+      #wq4N6X4JZRr1SNk4,
+      #RKzUUPl3JqY3Yz4V {
+        display: none;
+      }
+
       #aGwTWNInW5rbndhC {
-        grid-template-columns: 0 0 2.20369326rem 0.64641645rem 14.95894828rem 1.58734006rem 0.1007529rem 0 2.11932573rem 0.68860021rem 12.60716841rem 0 1.84162997rem 0.27021767rem 0.28211599rem 0.41022326rem 11.83963533rem 0.49987996rem 2.10928309rem 0.00256456rem 0.55350815rem 0.1388311rem 11.20092427rem 0.69330104rem 0 2.17530287rem 0.43546295rem 0.19342108rem 14.44879838rem 0.55607271rem;
-        grid-template-rows: 0 0 0 0 0 minmax(1.525365rem, max-content) 0 0 0 0 minmax(1.22248105rem, max-content) minmax(0.32087968rem, max-content) minmax(0.08840345rem, max-content) minmax(0.00290199rem, max-content) minmax(0.00747808rem, max-content) minmax(0.16046655rem, max-content) minmax(0.1052752rem, max-content) 0 minmax(0.03848422rem, max-content) minmax(0.02839695rem, max-content) minmax(1.18238596rem, max-content) minmax(0.1052752rem, max-content) minmax(0.06688117rem, max-content) minmax(0.0245749rem, max-content) minmax(0.12688766rem, max-content) minmax(0.27321983rem, max-content) 0 minmax(0.00290199rem, max-content) 0 minmax(0.40928313rem, max-content);
+        display: table-row !important;
+        position: relative !important;
+        font-size: 2.75rem;
+        gap: 1rem;
       }
 
       #aPqlW3jrUCnHuDys {
         position: relative;
-        grid-area: 5 / 4 / 6 / 7;
+        grid-area: 2 / 4 / 6 / 7;
+      }
+
+      .mud-icon-size-large {
+          font-size: 4.75rem;
       }
 
       #GKRS8gwgYbkGLafi {
@@ -4804,14 +4849,29 @@
         grid-area: 20 / 29 / 25 / 30;
       }
 
+      #KT0IwfR2puGUFjMS,
+      #KT0IwfR2puGUFjMS,
+      #HyPAchTddSw63kqC,
+      #PDuO7bYmbsuP63zg,
+      #wq4N6X4JZRr1SNk4,
+      #RKzUUPl3JqY3Yz4V {
+        display: none;
+      }
+
       #aGwTWNInW5rbndhC {
-        grid-template-columns: 0 0 2.25377719rem 0.66110773rem 15.29892438rem 1.62341597rem 0.10304274rem 0 2.16749222rem 0.70425022rem 12.89369497rem 0 1.8834852rem 0.27635898rem 0.28852772rem 0.41954652rem 12.10871795rem 0.51124087rem 2.15722134rem 0.00262284rem 0.56608788rem 0.14198635rem 11.45549073rem 0.70905788rem 0 2.22474157rem 0.44535983rem 0.19781701rem 14.77718016rem 0.56871072rem;
-        grid-template-rows: 0 0 0 0 0 minmax(1.56003238rem, max-content) 0 0 0 0 minmax(1.25026471rem, max-content) minmax(0.3281724rem, max-content) minmax(0.09041261rem, max-content) minmax(0.00296794rem, max-content) minmax(0.00764804rem, max-content) minmax(0.16411351rem, max-content) minmax(0.10766782rem, max-content) 0 minmax(0.03935886rem, max-content) minmax(0.02904233rem, max-content) minmax(1.20925837rem, max-content) minmax(0.10766782rem, max-content) minmax(0.06840119rem, max-content) minmax(0.02513342rem, max-content) minmax(0.12977147rem, max-content) minmax(0.27942938rem, max-content) 0 minmax(0.00296794rem, max-content) 0 minmax(0.41858502rem, max-content);
+        display: table-row !important;
+        position: relative !important;
+        font-size: 2.25rem;
+        gap: 1rem;
       }
 
       #aPqlW3jrUCnHuDys {
         position: relative;
-        grid-area: 5 / 4 / 6 / 7;
+        grid-area: 2 / 4 / 6 / 7;
+      }
+
+      .mud-icon-size-large {
+          font-size: 4.15rem;
       }
 
       #GKRS8gwgYbkGLafi {
@@ -6343,7 +6403,7 @@
             <div id="UospZZHH2ssO71Pl"
               style="flex-direction:column;display:flex;width:100%;justify-content:flex-start;opacity:1.0;box-sizing:border-box;height:100%;">
               <p id="nWbze1YXGohUaXfm"
-                style="text-transform:none;color:#e30417;letter-spacing:0em;font-family:system-ui;line-height:1.18525906em;">
+                style="text-transform:none;color:#e30417;letter-spacing:0em;font-family:system-ui;line-height:0.58525906em;">
                 <span id="IbB2Ey7QFVKcxSLW" style="font-weight: bolder; color:#ffffff;">A História</span></p>
             </div>
           </div>
