--- a/Shared/CustomFooter.razor
+++ b/Shared/CustomFooter.razor
@@ -1,14 +1,26 @@
-﻿<MudPaper Elevation="0" Style="width:100%; background:rgba(0,0,0,0.02); margin-top: 0;">
-    <MudPaper Style="background:rgba(0,0,0,0.2); width:100%; padding:1rem 0; display:flex; flex-direction:column; align-items:center; justify-content:center;">
-        <MudImage Src="akaratefelgueiras/lcb-soft-devel.webp"
-                  Alt="Logo LCB Soft Develop"
-                  SrcSet="akaratefelgueiras/lcb-soft-devel.webp 3280w, akaratefelgueiras/lcb-soft-devel.webp 6520w"
-                  Style="max-height:48px; margin-bottom:0.5rem;" />
-        <MudText Typo="Typo.body1" Style="font-family:system-ui; font-weight:bolder; text-align:center;">
-            © 2023 - <b>@DateTime.UtcNow.Year</b> Copyright:
-            <MudLink Href="https://www.linkedin.com/in/luis-filipe-costa-brochado-62b63bb7/" Style="color:#222; font-weight:600; text-decoration:none;" Target="_blank">
-                Associação de Karaté de Felgueiras / Luis Costa Brochado
-            </MudLink>
-        </MudText>
+﻿<MudBreakpointProvider OnBreakpointChanged="OnBreakpointChanged">
+    <MudPaper Elevation="0" Style="width:100%; background:rgba(0,0,0,0.02); margin-top: 0;">
+        <MudPaper Style="background:rgba(0,0,0,0.2); width:100%; padding:1rem 0; display:flex; flex-direction:column; align-items:center; justify-content:center;">
+            <MudImage Src="akaratefelgueiras/lcb-soft-devel.webp"
+                      Alt="Logo LCB Soft Develop"
+                      Style="@(IsMobile ? "max-height: 15%; max-width: 20%; margin-bottom:1rem;" : "max-height:10%; max-width: 15%;margin-bottom:0.5rem;")" />
+            <MudText Typo="Typo.body1" Style="@($"font-family:system-ui; font-weight:bolder; text-align:center; font-size:{(IsMobile ? "2.1rem" : "1.5rem")};")">
+                © 2023 - <b>@DateTime.UtcNow.Year</b> Copyright:
+                <MudLink Href="https://www.linkedin.com/in/luis-filipe-costa-brochado-62b63bb7/" Style="color:#222; font-weight:600; text-decoration:none;" Target="_blank">
+                    Associação de Karaté de Felgueiras / Luis Costa Brochado
+                </MudLink>
+            </MudText>
+        </MudPaper>
     </MudPaper>
-</MudPaper>
+</MudBreakpointProvider>
+
+@code {
+    private MudBlazor.Breakpoint _currentBreakpoint;
+    private bool IsMobile => _currentBreakpoint < MudBlazor.Breakpoint.Sm;
+
+    private void OnBreakpointChanged(MudBlazor.Breakpoint breakpoint)
+    {
+        _currentBreakpoint = breakpoint;
+        StateHasChanged();
+    }
+}
